added contact section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashish Jha</title>
-  git reset --soft HEAD~1  git reset --soft HEAD~1  git reset --soft HEAD~1  <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
+  <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
   <!-- css -->
   <link href="./Ashish Jha __ Home_files/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -149,7 +149,7 @@
           <img src="./Ashish Jha __ Home_files/ashish.jpg" class="hero-photo" alt="ashish jha">
         </article>
       </div>
-      <div class="wave"></div>
+      <div class="waves"></div>
     </div>
     <!-- Reaction Emoji -->
     <div class="reaction-emoji" id="reactionEmoji" title="Surprise Click">😎</div>
@@ -265,6 +265,10 @@
               <div class="skill-box">
                 <i class="fas fa-lock"></i>
                 <span>Spring <br> Security</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-cloud"></i>
+                <span>Spring <br> Cloud</span>
               </div>
             </section>
           </div>
@@ -464,95 +468,79 @@
     </div>
   </section>
 
-  <section class="connect">
-    <video controls="" autoplay="" muted="" loop="" class="video-container" poster="./images/handshake.jpg">
-      <source
-        src="https://d33wubrfki0l68.cloudfront.net/27e59ab00754b94c35f77ac841a50610caee9c80/4deb6/videos/connect.mp4"
-        type="video/mp4">
-      Sorry, your browser does not support embedded videos
-    </video>
-    <div class="video-banner">
-      <!-- section title -->
-      <div class="section-title">
-        <h2>let's get in touch</h2>
-        <div class="underline"></div>
+
+  <Section class="contact">
+    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+      <h2 class="experience">Contact</h2>
+      <!-- <div>
+        <img src="./Ashish Jha __ Home_files/tree.gif" alt="tree"
+          style="width:  55px; height: 60px; margin-bottom: 10px;">
+      </div> -->
+    </div>
+    <div class="e-card playing">
+      <div class="image"></div>
+
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+
+
+      <div class="infotop">
+
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M19.4133 4.89862L14.5863 2.17544C12.9911 1.27485 11.0089 1.27485 9.41368 2.17544L4.58674
+  4.89862C2.99153 5.7992 2 7.47596 2 9.2763V14.7235C2 16.5238 2.99153 18.2014 4.58674 19.1012L9.41368
+  21.8252C10.2079 22.2734 11.105 22.5 12.0046 22.5C12.6952 22.5 13.3874 22.3657 14.0349 22.0954C14.2204
+  22.018 14.4059 21.9273 14.5872 21.8252L19.4141 19.1012C19.9765 18.7831 20.4655 18.3728 20.8651
+  17.8825C21.597 16.9894 22 15.8671 22 14.7243V9.27713C22 7.47678 21.0085 5.7992 19.4133 4.89862ZM4.10784
+  14.7235V9.2763C4.10784 8.20928 4.6955 7.21559 5.64066 6.68166L10.4676 3.95848C10.9398 3.69152 11.4701
+  3.55804 11.9996 3.55804C12.5291 3.55804 13.0594 3.69152 13.5324 3.95848L18.3593 6.68166C19.3045 7.21476
+  19.8922 8.20928 19.8922 9.2763V9.75997C19.1426 9.60836 18.377 9.53091 17.6022 9.53091C14.7929 9.53091
+  12.1041 10.5501 10.0309 12.3999C8.36735 13.8847 7.21142 15.8012 6.68783 17.9081L5.63981 17.3165C4.69466
+  16.7834 4.10699 15.7897 4.10699 14.7235H4.10784ZM10.4676 20.0413L8.60933 18.9924C8.94996 17.0479 9.94402
+  15.2665 11.4515 13.921C13.1353 12.4181 15.3198 11.5908 17.6022 11.5908C18.3804 11.5908 19.1477 11.6864
+  19.8922 11.8742V14.7235C19.8922 15.2278 19.7589 15.7254 19.5119 16.1662C18.7615 15.3596 17.6806 14.8528
+   16.4783 14.8528C14.2136 14.8528 12.3781 16.6466 12.3781 18.8598C12.3781 19.3937 12.4861 19.9021 12.68
+   20.3676C11.9347 20.5316 11.1396 20.4203 10.4684 20.0413H10.4676Z"></path>
+        </svg><br>
+        Software Developer
+        <br>
+        <div class="contact-box">
+          <span class="contact-info">+91 8860673349</span>
+          <span class="separator">|</span>
+          <span class="contact-info">network.ashishjha@gmail.com</span>
+        </div>
+        
+
+        <div class="main">
+          <div class="up">
+            <a href="https://www.linkedin.com/in/ashish-jha-890ab3206/" class="social-icon" target="_blank">
+              <button class="card1">
+                <i class="fab fa-linkedin"></i>
+              </button></a>
+            <a href="https://x.com/Ashish5Jha" class="social-icon" target="_blank">
+              <button class="card2">
+                <i class="fab fa-twitter"></i>
+              </button></a>
+          </div>
+          <div class="down">
+            <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
+              <button class="card3">
+                <i class="fab fa-github"></i>
+              </button></a>
+            <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
+              <button class="card4">
+                <i class="fab fa-discord"></i>
+              </button></a>
+          </div>
+        </div>
+        <div class="sign">
+          <img src="./Ashish Jha __ Home_files/signature.png" alt="">
+        </div>
       </div>
-      <!--end of section title -->
-      <p class="video-text">
-        Want to get in touch with me? It's very simple just click the button,
-        a Genie will convey your message to me.
-      </p>
-      <a class="btn" href="https://ashish5jha.github.io/portfolio/contact">contact me</a>
     </div>
-  </section>
-  <!-- end of connect -->
-  <!-- skills -->
-  <section class="section skills">
-    <!-- section title -->
-    <div class="section-title">
-      <h2>skills</h2>
-      <div class="underline"></div>
-    </div>
-    <!--end of section title -->
-    <div class="section-center skills-center">
-      <article>
-        <h3>front end</h3>
-        <!-- single skill -->
-        <div class="skill">
-          <p>HTML/CSS</p>
-          <div class="skill-container">
-            <div class="skill-value value-85"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-        <!-- single skill -->
-        <div class="skill">
-          <p>Javascript</p>
-          <div class="skill-container">
-            <div class="skill-value value-70"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-        <!-- single skill -->
-        <div class="skill">
-          <p>React</p>
-          <div class="skill-container">
-            <div class="skill-value value-75"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-      </article>
-      <article>
-        <h3>back end</h3>
-        <!-- single skill -->
-        <div class="skill">
-          <p>Node</p>
-          <div class="skill-container">
-            <div class="skill-value value-70"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-        <!-- single skill -->
-        <div class="skill">
-          <p>Express</p>
-          <div class="skill-container">
-            <div class="skill-value value-75"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-        <!-- single skill -->
-        <div class="skill">
-          <p>MongoDB</p>
-          <div class="skill-container">
-            <div class="skill-value value-65"></div>
-          </div>
-        </div>
-        <!--end of  single skill -->
-      </article>
-    </div>
-  </section>
-  <!-- end of skills -->
-  <!-- timeline -->
+  </Section>
+
   <section class="section timeline">
     <!-- section title -->
     <div class="section-title">
