added new timeline

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
           <span class="separator">|</span>
           <span class="contact-info">network.ashishjha@gmail.com</span>
         </div>
-        
+
 
         <div class="main">
           <div class="up">
@@ -540,61 +540,80 @@
       </div>
     </div>
   </Section>
-
   <section class="section timeline">
-    <!-- section title -->
-    <div class="section-title">
-      <h2>timeline</h2>
-      <div class="underline"></div>
+    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+      <h2 class="experience">timeline</h2>
     </div>
-    <!--end of section title -->
     <div class="section-center timeline-center">
-      <!-- single timeline item -->
+      <article class="timeline-item">
+        <h4>2024</h4>
+        <p>
+          Graduated with a B.Tech in Computer Science and Engineering. Started working full-time as a software
+          developer, embarking on an exciting new professional journey.
+        </p>
+        <span class="number">1</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2023</h4>
+        <p>
+          Secured an internship, gaining valuable industry experience. Now in the 4th year of college, I continued to
+          build on my web development skills.
+        </p>
+        <span class="number">2</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2022</h4>
+        <p>
+          Progressed to the 3rd year of college. This year was marked by deeper dives into web development, exploring
+          various frameworks and enhancing my skills.
+        </p>
+        <span class="number">3</span>
+      </article>
       <article class="timeline-item">
         <h4>2021</h4>
         <p>
-          Time flies, it's almost the end of 3rd year of college and I have
-          come far away with my interest in web development now I spend most
-          of my day, experimenting with HTML, CSS, JavaScript (and its endless
-          list of frameworks).
+          Entered the 2nd year of college. My interest in web development grew stronger, and I spent a significant
+          amount of time experimenting with HTML, CSS, and JavaScript.
         </p>
-        <span class="number"> 1 </span>
+        <span class="number">4</span>
       </article>
-      <!-- end of  single timeline item -->
-      <!-- single timeline item -->
       <article class="timeline-item">
         <h4>2020</h4>
         <p>
-          It started with a global outbreak of Corona virus, spent all of the
-          year at home doing online classes and experimenting with the
-          interest in web development.
+          Graduated 12th standard with 82.8%. Despite the global outbreak of the Coronavirus, I adapted to online
+          classes and continued to excel academically. This year, I also joined college to pursue a B.Tech in Computer
+          Science and Engineering.
         </p>
-        <span class="number"> 2 </span>
+        <span class="number">5</span>
       </article>
-      <!-- end of  single timeline item -->
-      <!-- single timeline item -->
-      <article class="timeline-item">
-        <h4>2019</h4>
-        <p>
-          Not a freshman anymore, now in 2nd year of college with some
-          knowledge of programming. Started web development and got interested
-          in it.
-        </p>
-        <span class="number"> 3 </span>
-      </article>
-      <!-- end of  single timeline item -->
-      <!-- single timeline item -->
       <article class="timeline-item">
         <h4>2018</h4>
         <p>
-          Beginning of a new phase in life. Started college as a fresher,
-          looked forward to comming opportunities in college life.
+          Completed 10th standard with an impressive 88%. This year marked the beginning of my academic journey towards
+          higher education.
         </p>
-        <span class="number"> 4 </span>
+        <span class="number">6</span>
       </article>
-      <!-- end of  single timeline item -->
+    </div>
+    <div class="loader">
+      <div class="box">
+        <div class="logo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 94 94"
+            class="svg"
+          >
+          
+          </svg>
+        </div>
+      </div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
     </div>
   </section>
+
   <!--end of  timeline -->
 
   <!-- blog -->
