new features added

--- a/index.html
+++ b/index.html
@@ -335,44 +335,36 @@
 
     </div>
   </section>
-  <section class="section bg-grey">
-    <div class="section-title">
-      <h2>services</h2>
-      <div class="underline"></div>
+   <section class="section bg-grey">
+    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+      <h2 class="experience">education</h2>
+      <div>
+      </div>
     </div>
-    <div class="services-center section-center">
-      <article class="service">
-        <i class="fab fa-sketch service-icon icon1"></i>
-        <h4>Front End</h4>
-        <div class="underline"></div>
-        <p>
-          Crafting scalable front-end architectures and designing intuitive user interactions for dynamic web
-          experiences. Committed to ensuring application responsiveness across devices while collaborating closely with
-          graphic designers to integrate compelling visual elements seamlessly.
-        </p>
-      </article>
-      <article class="service">
-        <i class="fas fa-code service-icon icon1"></i>
-        <h4>Backend</h4>
-        <div class="underline"></div>
-        <p>
-          Building robust backend systems with a focus on scalable architecture and efficient data management. Designing
-          and implementing APIs, optimizing performance, and ensuring seamless integration with front-end applications,
-          all while adhering to best practices and collaborating with cross-functional teams.
-        </p>
-      </article>
-      <article class="service">
-        <i class="fas fa-database service-icon icon1"></i>
-        <h4>Database</h4>
-        <div class="underline"></div>
-        <p>
-          Proficient in crafting and managing databases with PostgreSQL, MySQL, and MongoDB. Experienced in designing
-          scalable schemas, fine-tuning query performance, and implementing robust data strategies to drive application
-          efficiency and reliability.
-        </p>
-      </article>
-      <!-- end of single service -->
-    </div>
+      <div class="services-center section-center">
+          <article class="service">
+              <i class="fas fa-school service-icon "></i>
+              <h4>10th Standard</h4>
+              <p>
+                  Achieved an outstanding score of 88% in my 10th standard from New Creation Public School, Delhi. This milestone laid a strong foundation for my academic journey.
+              </p>
+          </article>
+          <article class="service">
+              <i class="fas fa-university  service-icon "></i>
+              <h4>12th Standard</h4>
+              <p>
+                  Graduated with a remarkable score of 82.8% in my 12th standard from GBVS, Delhi. This achievement demonstrated my dedication and commitment to academic excellence.
+              </p>
+          </article>
+          <article class="service">
+              <i class="fas fa-user-graduate service-icon "></i>
+              <h4>Graduation</h4>
+              <p>
+                  Earned my B.Tech degree in Computer Science and Engineering from RD Engineering College, UP (AKTU University) with a commendable CGPA of 7.85. This accomplishment reflects my proficiency and passion for technology and engineering.
+              </p>
+          </article>
+          <!-- end of single service -->
+      </div>
   </section>
 
   <section class="section projects exp-sec">
