Refactor carousel styles and layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- css -->
   <link href="./Ashish Jha __ Home_files/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-----Fevicon----->
   <link rel="apple-touch-icon" sizes="180x180" href="./Ashish Jha __ Home_files/logo.webp">
   <link rel="icon" type="image/png" sizes="32x32" href="./Ashish Jha __ Home_files/logo.webp">
@@ -335,36 +336,40 @@
 
     </div>
   </section>
-   <section class="section bg-grey">
+  <section class="section bg-grey">
     <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
       <h2 class="experience">education</h2>
       <div>
       </div>
     </div>
-      <div class="services-center section-center">
-          <article class="service">
-              <i class="fas fa-school service-icon "></i>
-              <h4>10th Standard</h4>
-              <p>
-                  Achieved an outstanding score of 88% in my 10th standard from New Creation Public School, Delhi. This milestone laid a strong foundation for my academic journey.
-              </p>
-          </article>
-          <article class="service">
-              <i class="fas fa-university  service-icon "></i>
-              <h4>12th Standard</h4>
-              <p>
-                  Graduated with a remarkable score of 82.8% in my 12th standard from GBVS, Delhi. This achievement demonstrated my dedication and commitment to academic excellence.
-              </p>
-          </article>
-          <article class="service">
-              <i class="fas fa-user-graduate service-icon "></i>
-              <h4>Graduation</h4>
-              <p>
-                  Earned my B.Tech degree in Computer Science and Engineering from RD Engineering College, UP (AKTU University) with a commendable CGPA of 7.85. This accomplishment reflects my proficiency and passion for technology and engineering.
-              </p>
-          </article>
-          <!-- end of single service -->
-      </div>
+    <div class="services-center section-center">
+      <article class="service">
+        <i class="fas fa-school service-icon "></i>
+        <h4>10th Standard</h4>
+        <p>
+          Achieved an outstanding score of 88% in my 10th standard from New Creation Public School, Delhi. This
+          milestone laid a strong foundation for my academic journey.
+        </p>
+      </article>
+      <article class="service">
+        <i class="fas fa-university  service-icon "></i>
+        <h4>12th Standard</h4>
+        <p>
+          Graduated with a remarkable score of 82.8% in my 12th standard from GBVS, Delhi. This achievement demonstrated
+          my dedication and commitment to academic excellence.
+        </p>
+      </article>
+      <article class="service">
+        <i class="fas fa-user-graduate service-icon "></i>
+        <h4>Graduation</h4>
+        <p>
+          Earned my B.Tech degree in Computer Science and Engineering from RD Engineering College, UP (AKTU University)
+          with a commendable CGPA of 7.85. This accomplishment reflects my proficiency and passion for technology and
+          engineering.
+        </p>
+      </article>
+      <!-- end of single service -->
+    </div>
   </section>
 
   <section class="section projects exp-sec">
@@ -533,76 +538,71 @@
     </div>
   </Section>
   <section class="section timeline">
-      <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
-          <h2 class="experience">timeline</h2>
+    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+      <h2 class="experience">timeline</h2>
+    </div>
+    <div class="section-center timeline-center">
+      <article class="timeline-item">
+        <h4>2024</h4>
+        <p>
+          Graduated with a B.Tech in Computer Science and Engineering. Started working full-time as a software
+          developer, embarking on an exciting new professional journey.
+        </p>
+        <span class="number">6</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2023</h4>
+        <p>
+          Secured an internship, gaining valuable industry experience. Now in the 4th year of college, I continued to
+          build on my web development skills.
+        </p>
+        <span class="number">5</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2022</h4>
+        <p>
+          Progressed to the 3rd year of college. This year was marked by deeper dives into web development, exploring
+          various frameworks and enhancing my skills.
+        </p>
+        <span class="number">4</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2021</h4>
+        <p>
+          Entered the 2nd year of college. My interest in web development grew stronger, and I spent a significant
+          amount of time experimenting with HTML, CSS, and JavaScript.
+        </p>
+        <span class="number">3</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2020</h4>
+        <p>
+          Graduated 12th standard with 82.8%. Despite the global outbreak of the Coronavirus, I adapted to online
+          classes and continued to excel academically. This year, I also joined college to pursue a B.Tech in Computer
+          Science and Engineering.
+        </p>
+        <span class="number">2</span>
+      </article>
+      <article class="timeline-item">
+        <h4>2018</h4>
+        <p>
+          Completed 10th standard with an impressive 88%. This year marked the beginning of my academic journey towards
+          higher education.
+        </p>
+        <span class="number">1</span>
+      </article>
+    </div>
+    <div class="loader">
+      <div class="box">
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 94 94" class="svg">
+          </svg>
+        </div>
       </div>
-      <div class="section-center timeline-center">
-          <article class="timeline-item">
-              <h4>2024</h4>
-              <p>
-                  Graduated with a B.Tech in Computer Science and Engineering. Started working full-time as a software
-                  developer, embarking on an exciting new professional journey.
-              </p>
-              <span class="number">6</span>
-          </article>
-          <article class="timeline-item">
-              <h4>2023</h4>
-              <p>
-                  Secured an internship, gaining valuable industry experience. Now in the 4th year of college, I continued to
-                  build on my web development skills.
-              </p>
-              <span class="number">5</span>
-          </article>
-          <article class="timeline-item">
-              <h4>2022</h4>
-              <p>
-                  Progressed to the 3rd year of college. This year was marked by deeper dives into web development, exploring
-                  various frameworks and enhancing my skills.
-              </p>
-              <span class="number">4</span>
-          </article>
-          <article class="timeline-item">
-              <h4>2021</h4>
-              <p>
-                  Entered the 2nd year of college. My interest in web development grew stronger, and I spent a significant
-                  amount of time experimenting with HTML, CSS, and JavaScript.
-              </p>
-              <span class="number">3</span>
-          </article>
-          <article class="timeline-item">
-              <h4>2020</h4>
-              <p>
-                  Graduated 12th standard with 82.8%. Despite the global outbreak of the Coronavirus, I adapted to online
-                  classes and continued to excel academically. This year, I also joined college to pursue a B.Tech in Computer
-                  Science and Engineering.
-              </p>
-              <span class="number">2</span>
-          </article>
-          <article class="timeline-item">
-              <h4>2018</h4>
-              <p>
-                  Completed 10th standard with an impressive 88%. This year marked the beginning of my academic journey towards
-                  higher education.
-              </p>
-              <span class="number">1</span>
-          </article>
-      </div>
-      <div class="loader">
-          <div class="box">
-              <div class="logo">
-                  <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 94 94"
-                      class="svg"
-                  >
-                  </svg>
-              </div>
-          </div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-      </div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </section>
 
   <!--end of  timeline -->
@@ -614,126 +614,107 @@
       <h2>Projects</h2>
       <div class="underline"></div>
     </div>
-    <!--end of section title -->
-    <div class="section-center blog-center">
-      <!-- single project -->
-      <article class="single-project">
-        <div class="project-container">
-          <img src="./Ashish Jha __ Home_files/moviep1.png" alt="single project" height="250px">
-          <a href="https://moviesearchdb.netlify.app/" target="_blank" class="project-icon">
-            <i class="fas fa-share-square"></i>
-          </a>
-        </div>
-        <div class="project-details">
-          <h4>Movie DB</h4>
-          <p>
-            A website where users can search for their favourite movies and
-            get information about the movie.
-          </p>
-          <div class="project-footer">
-            <span>
-              <i class="fab fa-github"></i>
-            </span>
-            <a href="https://github.com/ashishjha/Movie-DB" target="_blank">source code</a>
-          </div>
-        </div>
-      </article>
-      <!-- end of single project -->
+    <!-- #my projects -->
+    <div class="wrappers blog ">
+      <i id="left" class="fa-solid fa-angle-left arrow-left"></i>
+      <ul class="carousel blog ">
+        <li class="card blog">
+          <article class="single-project blog">
+            <div class="project-container">
+              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
+              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
+                <i class="fas fa-share-square"></i>
+              </a>
+            </div>
+            <div class="project-details">
+              <h4>Stock Photos</h4>
+              <p>
+                A React-based project,shows stock photos according to the search
+                term, and loads more items on scrolling down.
+              </p>
+              <div class="project-footer">
+                <span>
+                  <i class="fab fa-github"></i>
+                </span>
+                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
+              </div>
+            </div>
+          </article>
+        </li>
+        <li class="card blog ">
+          <article class="single-project blog">
+            <div class="project-container">
+              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
+              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
+                <i class="fas fa-share-square"></i>
+              </a>
+            </div>
+            <div class="project-details">
+              <h4>Stock Photos</h4>
+              <p>
+                A React-based project,shows stock photos according to the search
+                term, and loads more items on scrolling down.
+              </p>
+              <div class="project-footer">
+                <span>
+                  <i class="fab fa-github"></i>
+                </span>
+                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
+              </div>
+            </div>
+          </article>
+        </li>
+        <li class="card blog">
+          <article class="single-project">
+            <div class="project-container">
+              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
+              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
+                <i class="fas fa-share-square"></i>
+              </a>
+            </div>
+            <div class="project-details">
+              <h4>Stock Photos</h4>
+              <p>
+                A React-based project,shows stock photos according to the search
+                term, and loads more items on scrolling down.
+              </p>
+              <div class="project-footer">
+                <span>
+                  <i class="fab fa-github"></i>
+                </span>
+                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
+              </div>
+            </div>
+          </article>
+        </li>
+        <li class="card blog">
+          <article class="single-project">
+            <div class="project-container">
+              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
+              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
+                <i class="fas fa-share-square"></i>
+              </a>
+            </div>
+            <div class="project-details">
+              <h4>Stock Photos</h4>
+              <p>
+                A React-based project,shows stock photos according to the search
+                term, and loads more items on scrolling down.
+              </p>
+              <div class="project-footer">
+                <span>
+                  <i class="fab fa-github"></i>
+                </span>
+                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
+              </div>
+            </div>
+          </article>
+        </li>
 
-      <!-- single project -->
-      <article class="single-project">
-        <div class="project-container">
-          <img src="./Ashish Jha __ Home_files/themep2.png" alt="single project" height="250px">
-          <a href="https://themetoggler.netlify.app/" target="_blank" class="project-icon">
-            <i class="fas fa-share-square"></i>
-          </a>
-        </div>
-        <div class="project-details">
-          <h4>Theme Toggler</h4>
-          <p>
-            A React-based project with the feature to toggle the theme from
-            dark-mode to light-mode.
-          </p>
-          <div class="project-footer">
-            <span>
-              <i class="fab fa-github"></i>
-            </span>
-            <a href="https://github.com/ashishjha/Theme-Toggler" target="_blank">source code</a>
-          </div>
-        </div>
-      </article>
-      <!-- end of single project -->
-
-      <!-- single project -->
-      <article class="single-project">
-        <div class="project-container">
-          <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
-          <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
-            <i class="fas fa-share-square"></i>
-          </a>
-        </div>
-        <div class="project-details">
-          <h4>Stock Photos</h4>
-          <p>
-            A React-based project,shows stock photos according to the search
-            term, and loads more items on scrolling down.
-          </p>
-          <div class="project-footer">
-            <span>
-              <i class="fab fa-github"></i>
-            </span>
-            <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
-          </div>
-        </div>
-      </article>
-      <!-- end of single project -->
+      </ul>
+      <i id="right" class="fa-solid fa-angle-right arrow-right"></i>
     </div>
-    <!-----Button----->
-    <br><br>
-    <center>
-      <a class="btn" href="https://ashish5jha.github.io/portfolio/projects">Projects</a>
-    </center>
-    <!---End of button---->
   </section>
-
- <!-- #my projects -->
- <div class="wrapper">
-  <i id="left" class="fa-solid fa-angle-left"></i>
-  <ul class="carousel">
-    <li class="card">
-      <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
-      <h2>Blanche Pearson</h2>
-      <span>Sales Manager</span>
-    </li>
-    <li class="card">
-      <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
-      <h2>Joenas Brauers</h2>
-      <span>Web Developer</span>
-    </li>
-    <li class="card">
-      <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
-      <h2>Lariach French</h2>
-      <span>Online Teacher</span>
-    </li>
-    <li class="card">
-      <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
-      <h2>James Khosravi</h2>
-      <span>Freelancer</span>
-    </li>
-    <li class="card">
-      <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
-      <h2>Kristina Zasiadko</h2>
-      <span>Bank Manager</span>
-    </li>
-    <li class="card">
-      <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
-      <h2>Donald Horton</h2>
-      <span>App Designer</span>
-    </li>
-  </ul>
-  <i id="right" class="fa-solid fa-angle-right"></i>
-</div>
-
   <!-- footer -->
   <footer class="footer">
     <!-- social icons -->
