--- a/index.html
+++ b/index.html
@@ -608,111 +608,137 @@
   <!--end of  timeline -->
 
   <!-- blog -->
-  <section class="section blog">
-    <!-- section title -->
-    <div class="section-title">
-      <h2>Projects</h2>
-      <div class="underline"></div>
-    </div>
-    <!-- #my projects -->
-    <div class="wrappers blog ">
-      <i id="left" class="fa-solid fa-angle-left arrow-left"></i>
-      <ul class="carousel blog ">
-        <li class="card blog">
-          <article class="single-project blog">
-            <div class="project-container">
-              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
-              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
-                <i class="fas fa-share-square"></i>
-              </a>
-            </div>
-            <div class="project-details">
-              <h4>Stock Photos</h4>
-              <p>
-                A React-based project,shows stock photos according to the search
-                term, and loads more items on scrolling down.
-              </p>
-              <div class="project-footer">
-                <span>
-                  <i class="fab fa-github"></i>
-                </span>
-                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
-              </div>
-            </div>
-          </article>
-        </li>
-        <li class="card blog ">
-          <article class="single-project blog">
-            <div class="project-container">
-              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
-              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
-                <i class="fas fa-share-square"></i>
-              </a>
-            </div>
-            <div class="project-details">
-              <h4>Stock Photos</h4>
-              <p>
-                A React-based project,shows stock photos according to the search
-                term, and loads more items on scrolling down.
-              </p>
-              <div class="project-footer">
-                <span>
-                  <i class="fab fa-github"></i>
-                </span>
-                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
-              </div>
-            </div>
-          </article>
-        </li>
-        <li class="card blog">
-          <article class="single-project">
-            <div class="project-container">
-              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
-              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
-                <i class="fas fa-share-square"></i>
-              </a>
-            </div>
-            <div class="project-details">
-              <h4>Stock Photos</h4>
-              <p>
-                A React-based project,shows stock photos according to the search
-                term, and loads more items on scrolling down.
-              </p>
-              <div class="project-footer">
-                <span>
-                  <i class="fab fa-github"></i>
-                </span>
-                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
-              </div>
-            </div>
-          </article>
-        </li>
-        <li class="card blog">
-          <article class="single-project">
-            <div class="project-container">
-              <img src="./Ashish Jha __ Home_files/stockp4.png" alt="single project" height="250px">
-              <a href="https://photos-stock.netlify.app/" target="_blank" class="project-icon">
-                <i class="fas fa-share-square"></i>
-              </a>
-            </div>
-            <div class="project-details">
-              <h4>Stock Photos</h4>
-              <p>
-                A React-based project,shows stock photos according to the search
-                term, and loads more items on scrolling down.
-              </p>
-              <div class="project-footer">
-                <span>
-                  <i class="fab fa-github"></i>
-                </span>
-                <a href="https://github.com/ashishjha/Stock-Photos" target="_blank">source code</a>
-              </div>
-            </div>
-          </article>
-        </li>
+  <section class="section skills">
+    <div class="section-center" style="width: 100%; justify-content: start;align-items: center;display: flex;">
+      <article class="about-info">
+        <div class="section-title about-title  "
+          style="display: flex; justify-content: space-between;align-items: center;">
+          <div class="">
+            <h2>My Projects</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="panda">
+            <img src="./Ashish Jha __ Home_files/panda.gif" alt="Hi_Panda" width="85px"
+              style="width: 85px;height: 85px;">
+          </div>
+        </div>
 
-      </ul>
-      <i id="right" class="fa-solid fa-angle-right arrow-right"></i>
+              <div class="works-section" id="works-section">
+            <div class="works-card">
+                <div class="row">
+                    <div class="column">
+                        <img src="path/to/project-image.jpg" alt="Project Image" class="project-image">
+                    </div>
+                    <div class="column">
+                        <div class="button-container">
+                            <button class="btn know-more">Know More</button>
+                            <button class="btn github">GitHub</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row description">
+                    <p>
+                        This project is a comprehensive web application built using <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>TypeScript</strong>, <strong>React</strong>, <strong>Redux</strong>, and <strong>Angular</strong>. It showcases a variety of frontend development skills and best practices.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+          <!-- Backend Section -->
+          <div class="skills-card">
+            <h3 style="color: darkgreen;">Backend</h3>
+            <section class="skills">
+              <div class="skill-box">
+                <i class="fab fa-java"></i>
+                <span>Java</span>
+              </div>
+              <div class="skill-box">
+                <i class="fab fa-node-js"></i>
+                <span>Node.js</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-server"></i>
+                <span>Express</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-leaf"></i>
+                <span>Spring Boot</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>Hibernate</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-lock"></i>
+                <span>Spring <br> Security</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-cloud"></i>
+                <span>Spring <br> Cloud</span>
+              </div>
+            </section>
+          </div>
+
+          <!-- Database Section -->
+          <div class="skills-card">
+            <h3 style="color: darkgreen;">Database</h3>
+            <section class="skills">
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>MySQL</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>PostgreSQL</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>MongoDB</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>Mongoose</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-database"></i>
+                <span>Redis</span>
+              </div>
+            </section>
+          </div>
+
+          <!-- Tools Section -->
+          <div class="skills-card">
+            <h3 style="color: darkgreen;">Tools</h3>
+            <section class="skills">
+              <div class="skill-box">
+                <i class="fab fa-git-alt"></i>
+                <span>Git</span>
+              </div>
+              <div class="skill-box">
+                <i class="fab fa-docker"></i>
+                <span>Docker</span>
+              </div>
+              <div class="skill-box">
+                <i class="fas fa-stream"></i>
+                <span>Kafka</span>
+              </div>
+              <div class="skill-box">
+                <i class="fab fa-aws"></i>
+                <span>AWS</span>
+              </div>
+              <div class="skill-box">
+                <i class="fab fa-linux"></i>
+                <span>Linux</span>
+              </div>
+              <div class="skill-box">
+                <i class="fab fa-npm"></i>
+                <span>NPM</span>
+              </div>
+            </section>
+          </div>
+        </div>
+      </article>
+
     </div>
   </section>
   <!-- footer -->
