--- a/index.html
+++ b/index.html
@@ -623,121 +623,140 @@
           </div>
         </div>
 
-              <div class="works-section" id="works-section">
-            <div class="works-card">
-                <div class="row">
-                    <div class="column">
-                        <img src="path/to/project-image.jpg" alt="Project Image" class="project-image">
-                    </div>
-                    <div class="column">
-                        <div class="button-container">
-                            <button class="btn know-more">Know More</button>
-                            <button class="btn github">GitHub</button>
-                        </div>
-                    </div>
+        <div class="projects-section" id="projects-section">
+          <div class="project-card">
+            <div class="project-row">
+              <div class="project-column" >
+                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+              </div>
+              <div class="project-column" style="flex-basis: 50%;">
+                <div class="project-description">
+                  <h3>Nav Finder Backend</h3>
+                  <p>
+                    This project is a comprehensive web application built using <strong>HTML</strong>,
+                    <strong>CSS</strong>,
+                    <strong>JavaScript</strong>, <strong>TypeScript</strong>, <strong>React</strong>,
+                    <strong>Redux</strong>,
+                    and <strong>Angular</strong>. It showcases a variety of frontend development skills and best
+                    practices.
+                  </p>
+                  <div class="project-button-container">
+                    <button class="project-btn know-more">Know More</button>
+                    <button class="project-btn github">GitHub</button>
+                  </div>
                 </div>
-                <div class="row description">
-                    <p>
-                        This project is a comprehensive web application built using <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>TypeScript</strong>, <strong>React</strong>, <strong>Redux</strong>, and <strong>Angular</strong>. It showcases a variety of frontend development skills and best practices.
-                    </p>
-                </div>
+              </div>
             </div>
-        </div>
-
-          <!-- Backend Section -->
-          <div class="skills-card">
-            <h3 style="color: darkgreen;">Backend</h3>
-            <section class="skills">
-              <div class="skill-box">
-                <i class="fab fa-java"></i>
-                <span>Java</span>
+            <div class="project-row">
+              <div class="project-column" style="flex-basis: 100%;">
+                <div class="project-tags">
+                  <span class="tag">HTML</span>
+                  <span class="tag">CSS</span>
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">TypeScript</span>
+                  <span class="tag">React</span>
+                  <span class="tag">Redux</span>
+                  <span class="tag">Angular</span>
+                </div>
               </div>
-              <div class="skill-box">
-                <i class="fab fa-node-js"></i>
-                <span>Node.js</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-server"></i>
-                <span>Express</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-leaf"></i>
-                <span>Spring Boot</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>Hibernate</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-lock"></i>
-                <span>Spring <br> Security</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-cloud"></i>
-                <span>Spring <br> Cloud</span>
-              </div>
-            </section>
-          </div>
-
-          <!-- Database Section -->
-          <div class="skills-card">
-            <h3 style="color: darkgreen;">Database</h3>
-            <section class="skills">
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>MySQL</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>PostgreSQL</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>MongoDB</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>Mongoose</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-database"></i>
-                <span>Redis</span>
-              </div>
-            </section>
-          </div>
-
-          <!-- Tools Section -->
-          <div class="skills-card">
-            <h3 style="color: darkgreen;">Tools</h3>
-            <section class="skills">
-              <div class="skill-box">
-                <i class="fab fa-git-alt"></i>
-                <span>Git</span>
-              </div>
-              <div class="skill-box">
-                <i class="fab fa-docker"></i>
-                <span>Docker</span>
-              </div>
-              <div class="skill-box">
-                <i class="fas fa-stream"></i>
-                <span>Kafka</span>
-              </div>
-              <div class="skill-box">
-                <i class="fab fa-aws"></i>
-                <span>AWS</span>
-              </div>
-              <div class="skill-box">
-                <i class="fab fa-linux"></i>
-                <span>Linux</span>
-              </div>
-              <div class="skill-box">
-                <i class="fab fa-npm"></i>
-                <span>NPM</span>
-              </div>
-            </section>
+            </div>
           </div>
         </div>
-      </article>
+
+        <!-- Backend Section -->
+        <div class="skills-card">
+          <h3 style="color: darkgreen;">Backend</h3>
+          <section class="skills">
+            <div class="skill-box">
+              <i class="fab fa-java"></i>
+              <span>Java</span>
+            </div>
+            <div class="skill-box">
+              <i class="fab fa-node-js"></i>
+              <span>Node.js</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-server"></i>
+              <span>Express</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-leaf"></i>
+              <span>Spring Boot</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>Hibernate</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-lock"></i>
+              <span>Spring <br> Security</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-cloud"></i>
+              <span>Spring <br> Cloud</span>
+            </div>
+          </section>
+        </div>
+
+        <!-- Database Section -->
+        <div class="skills-card">
+          <h3 style="color: darkgreen;">Database</h3>
+          <section class="skills">
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>MySQL</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>PostgreSQL</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>MongoDB</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>Mongoose</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-database"></i>
+              <span>Redis</span>
+            </div>
+          </section>
+        </div>
+
+        <!-- Tools Section -->
+        <div class="skills-card">
+          <h3 style="color: darkgreen;">Tools</h3>
+          <section class="skills">
+            <div class="skill-box">
+              <i class="fab fa-git-alt"></i>
+              <span>Git</span>
+            </div>
+            <div class="skill-box">
+              <i class="fab fa-docker"></i>
+              <span>Docker</span>
+            </div>
+            <div class="skill-box">
+              <i class="fas fa-stream"></i>
+              <span>Kafka</span>
+            </div>
+            <div class="skill-box">
+              <i class="fab fa-aws"></i>
+              <span>AWS</span>
+            </div>
+            <div class="skill-box">
+              <i class="fab fa-linux"></i>
+              <span>Linux</span>
+            </div>
+            <div class="skill-box">
+              <i class="fab fa-npm"></i>
+              <span>NPM</span>
+            </div>
+          </section>
+        </div>
+    </div>
+    </article>
 
     </div>
   </section>
